# zeabus-elec-code

./: .gitignore
libetcam/include/: libetcam.hpp
zeabus_elec_ros/: CMakeLists.txt  package.xml
zeabus_elec_ros/include/: action_code.hpp  error_code.hpp  etcam.hpp  logger.hpp  main.hpp  peripheral_bridge.hpp  power_distributor.hpp
zeabus_elec_ros/launch/: elec_launch.launch  etcam.launch  peripheral_bridge.launch  power_distributor.launch
zeabus_elec_ros/msg/: MessageAction.msg  MessageBarometerValue.msg  MessageHardwareError.msg  MessageIOPinState.msg  MessageNodeStatus.msg  MessageRawTelemetryValue.msg  MessageTelemetryValue.msg
zeabus_elec_ros/src/: etcam.cpp  logger.cpp  peripheral_bridge.cpp  power_distributor.cpp
zeabus_elec_ros/srv/: ServiceIOPinState.srv  ServiceSetPowerSwitch.srv
zeabus_elec_ros_etcam/: CMakeLists.txt  package.xml
zeabus_elec_ros_etcam/launch/: etcam.launch
zeabus_elec_ros_etcam/msg/: Telemetry.msg
zeabus_elec_ros_etcam/src/: zeabus_elec_ros_etcam.cpp
zeabus_elec_ros_etcam/srv/: CommandSetThrusterThrottle.srv
zeabus_elec_ros_hardware_interface/: CMakeLists.txt  package.xml
zeabus_elec_ros_hardware_interface/launch/: hardware_interface.launch
zeabus_elec_ros_hardware_interface/src/: zeabus_elec_ros_hardware_interface.cpp
zeabus_elec_ros_hardware_interface/srv/: GetDepthCommand.srv
zeabus_elec_ros_internal_interface/: CMakeLists.txt  package.xml
zeabus_elec_ros_peripheral_bridge/: CMakeLists.txt
zeabus_elec_ros_peripheral_bridge/launch/: peripheral_bridge.launch
zeabus_elec_ros_peripheral_bridge/msg/: barometer.msg
zeabus_elec_ros_peripheral_bridge/src/: zeabus_elec_ros_peripheral_bridge.cpp
zeabus_elec_ros_power_dist/: CMakeLists.txt  package.xml
zeabus_elec_ros_power_dist/launch/: power_dist.launch.py
zeabus_elec_ros_power_dist/src/: zeabus_elec_ros_power_dist.cpp
zeabus_elec_ros_power_dist/srv/: PowerDist.srv
