<?xml version="1.0"?>
<package format="2">
  <name>zeabus_elec_ros</name>
  <version>0.0.0</version>
  <description>The zeabus_elec_ros package</description>

  <maintainer email="natchanan.th@ku.th">Natchanan Thongtem</maintainer>
  <license>TODO</license>
  <author email="natchanan.th@th.th">Natchanan Thongtem</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>zeabus_utility</build_depend>
  <build_depend>zeabus_library_cpp</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
