<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zeabus_elec_ros_internal_interface</name>
  <version>1.0.0</version>
  <description>The ROS internal interface library package for Zeabus electronics</description>
  <maintainer email="natchanan.th@outlook.com">Natchanan Thongtem</maintainer>
  <license>TODO</license>

  <author email="natchanan.th@outlook.com">Natchanan Thongtem</author>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
