<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zeabus_elec_ros_power_dist</name>
  <version>2.0.0</version>
  <description>The ROS power distributor package for Zeabus</description>
  <maintainer email="natchanan.th@outlook.com">Natchanan Thongtem</maintainer>
  <license>BSD</license>

  <author email="akrapong.p@ku.ac.th">Akrapong Patchararungruang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>zeabus_elec_ros_internal_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>zeabus_elec_ros_internal_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
